2006-02-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	* setup.py:
	* trantool:
	  Cosmetic changes.

2006-02-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/application.py:
	* lib/gaupol/gtk/delegates/appupdate.py:
	* lib/gaupol/gtk/delegates/edit.py:
	* lib/gaupol/gtk/delegates/fileopen.py:
	* lib/gaupol/gtk/delegates/guiinit.py:
	* lib/gaupol/gtk/delegates/view.py:
	* lib/gaupol/gtk/delegates/viewupdate.py:
	  Renamed several application's widgets.

2006-02-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/constants.py:
	* lib/gaupol/gtk/application.py:
	* lib/gaupol/gtk/entries/time.py:
	* lib/gaupol/gtk/main.py:
	* lib/gaupol/gtk/output.py:
	  Cosmetic changes.

2006-02-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialogs/filechooser.py:
	  Fixed encoding combo box behaviour.

2006-02-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialogs/filechooser.py:
	  Changed to use config directly.
	  Cleaned up code.

	* lib/gaupol/gtk/delegates/fileopen.py:
	* lib/gaupol/gtk/delegates/filesave.py:
	  Adapted to changes in filechooser.py.

2006-02-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/cellrend/text.py:
	* lib/gaupol/gtk/dialogs/textedit.py:
	* lib/gaupol/gtk/entries/integer.py:
	* lib/gaupol/test/__init__.py:
	  Cosmetic changes.

2006-02-21  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/frconvert-dialog.glade:
	* data/glade/header-dialog.glade:
	* data/glade/language-dialog.glade:
	* data/glade/multiclose-dialog.glade:
	* data/glade/preferences-dialog.glade:
	* data/glade/previewerror-dialog.glade:
	* data/glade/spellcheck-dialog.glade:
	* data/glade/subinsert-dialog.glade:
	* data/glade/tmgadjust-dialog.glade:
	* data/glade/tmgshift-dialog.glade:
	* lib/gaupol/gtk/delegates/edit.py:
	* lib/gaupol/gtk/delegates/preview.py:
	* lib/gaupol/gtk/delegates/timing.py:
	* lib/gaupol/gtk/dialogs/frconvert.py:
	* lib/gaupol/gtk/dialogs/header.py:
	* lib/gaupol/gtk/dialogs/language.py: