@@ -15,7 +15,7 @@ General Information
 
   More information at the official website:
 
-    http://home.gna.org/gaupol/
+    http://home.gna.org/gaupol
 
 
 Dependencies
